<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quezzle</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_new_chat">Create your chatroom</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="subtitle">Venues and events chatroom</string>
    <string name="create">Create new chat</string>
    <string name="edit_profile">Change profile photo</string>
    <string name="new_message">New message</string>
    <string name="connecting">Connecting...</string>
    <string name="loading_auth">Authentication</string>
    <string name="loading_chats">Loading chats</string>
    <string name="loading_new_chat">Creating new chat</string>
    <string name="loading_messages">Loading messages</string>
    <string name="loading_profile_update">Updating profile</string>
    <string name="empty_field">Empty field</string>
    <string name="welcome">Welcome to Quezzle!</string>
    <string name="chat_has_new_message">Chat \"%1$s\" has new message</string>
    <string name="error_creating_chat">Error creating new chat:\n%1$s</string>
    <string name="error_reloading_chat_list">Error reloading chat list:\n%1$s</string>
    <string name="error_sending_message">Error sending message:\n%1$s</string>
    <string name="not_logged_id">You are not logged in</string>
    <string name="empty_message">The message is empty</string>
    <string name="new_chat_created">You have created a new chat!</string>
    <string name="select_picture">Select Picture</string>
    <string name="save">Save</string>
    <string name="image_path_is_empty">Image path is empty</string>
    <string name="error_uploading_image">Error uploading image</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="profile_updated">Profile was updated</string>
    <string name="profile_update_text">Tap the photo to change it</string>
    <string name="subscribe">Subscribe</string>
    <string name="no_gplus_link">Link to the G+ account is absent</string>
    <string name="usual_chat">Usual chat</string>
    <string name="geo_chat">Geo chat</string>
    <string name="chat_name">Chat name :</string>
    <string name="brief_description">Brief description :</string>
    <string name="chat_latitude">Latitude :</string>
    <string name="chat_longitude">Longitude :</string>
    <string name="chat_radius">Accessibility radius(m) :</string>
    <string name="playservices_unavailable">Google Play Services is unavailable</string>
    <string name="location_connecting_error">Error connecting to the location service</string>
    <string name="no_location_error">You can not send message : Your location is unknown</string>
    <string name="not_in_zone_error">You can not send message : You are not in the zone of chat </string>
    <string name="hide">Hide</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="message_hint">Input message</string>
    <string name="chat_unsubscribed">Unsubscribed from current chat</string>
    <string name="chat_subscribed">Subscribed to current chat</string>
    <string name="choose_location"> - choose chat location on a map</string>
    <string name="hint_refresh">Pull down to refresh chats list</string>
    <string name="start">Start chatting by entering the desired chatroom or create new one</string>
    <string name="action_show_map">Show map</string>
    <string name="message_share_template">\'%1$s\': \'%2$s\' - a quote from the chat \'%3$s\' in the Quezzle \'https://play.google.com/store/apps/details?id=com.skylion.quezzle\'</string>
</resources>
