<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.skylion.quezzle.ChatsListActivity" >

    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:icon="@drawable/refresh"
          android:orderInCategory="100"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_profile"
          android:title="@string/edit_profile"
          android:icon="@drawable/settings"
          android:orderInCategory="100"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_create"
          android:title="@string/create"
          android:icon="@drawable/plus"
          android:orderInCategory="100"
          android:showAsAction="always" />
    
</menu>